# datathon-grupo-16

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: model_config.yaml  monitoring_config.yaml
configs/grafana/: dashboard.json
data/golden_set/: golden_set.json
data/rag_documents/: glossary.md  market_analysis.md  model_documentation.md  petrobras_financials.md  petrobras_overview.md
docs/: LGPD_PLAN.md  MODEL_CARD.md  OWASP_MAPPING.md  RED_TEAM_REPORT.md  SYSTEM_CARD.md
evaluation/: ab_test_prompts.py  llm_judge.py  ragas_eval.py
metrics/: ab_test_results.json
notebooks/: 01_eda.ipynb
scripts/: index_documents.py
src/agent/: rag_pipeline.py  react_agent.py  tools.py
src/data/: collector.py  feature_engineering.py
src/models/: lstm_model.py  predict.py  train.py
src/monitoring/: drift.py  metrics.py
src/security/: guardrails.py  pii_detection.py
src/serving/: Dockerfile  app.py
tests/: conftest.py  test_agent.py  test_api.py  test_collector.py  test_drift.py  test_features.py  test_guardrails.py  test_models.py  test_predict.py  test_react_agent.py  test_tools.py  test_train.py
