[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datathon-lstm-stocks"
version = "0.1.0"
description = "LSTM stock price prediction with ReAct agent and RAG pipeline for Datathon Fase 05"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Grupo 16", email = "grupo@example.com"},
]

dependencies = [
    # Data
    "yfinance>=0.2.36",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandera>=0.18.0",
    "scikit-learn>=1.4.0",

    # Deep Learning
    "torch>=2.2.0",

    # MLflow
    "mlflow>=2.10.0",

    # LLM + Agent
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "openai>=1.10.0",

    # RAG
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.3.0",
    "langchain-huggingface>=0.0.1",

    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",

    # Monitoring
    "prometheus-client>=0.20.0",
    "evidently>=0.4.10",

    # Security
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",

    # Evaluation
    "ragas>=0.1.0",
    "datasets>=2.16.0",

    # Utils
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "joblib>=1.3.0",
    "ta>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "bandit>=1.7.7",
    "pre-commit>=3.6.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "notebooks/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
